before demo